2009-12-08

	* src/icons/address.xpm: modified icon.
	* src/icons/stock_person.png
	  src/stock_pixmap.[ch]: added new icon.

2009-12-08

	* libsylph/ssl.c
	  src/sslmanager.c: prohibit acception of expired certificates.

2009-12-08

	* src/compose.c: compose_close_cb(): modified button order on win32.

2009-12-04

	* src/summaryview.c: summary_filter_real(): disable sort while
	  filtering to prohibit 'The model has been modified from within
	  gtk_tree_selection_selected_foreach.' warning.

2009-11-26

	* version 3.0.0beta3

2009-11-26

	* src/Makefile.am: sylpheed.res: depend on icons/sylpheed.ico.

2009-11-26

	* src/addressbook.c: enabled lookup feature for all addressbook type.

2009-11-26

	* src/sylpheed.rc.in: modified LegalCopyright.

2009-11-26

	* libsylph/ssl.c: ssl_init_socket_with_method(): modified debug
	  output.

2009-11-26

	* libsylph/prefs_common.[ch]
	  src/prefs_common_dialog.c
	  src/folderview.c: the visibility of message number columns in the
	  folder view is now configurable for each column.

2009-11-26

	* libsylph/imap.c: made error log more verbose.
	* libsylph/socket.c: sock_connect_with_timeout(): check socket with
	  getsockopt() even if select() succeed.

2009-11-25

	* src/sslmanager.c: display issued and expire date. Refined text
	  format.

2009-11-24

	* src/addressbook.c: re-enabled sort order change because the bug
	  seems to be fixed.

2009-11-24

	* src/addressbook.c: addressbook_create(): create renderer for
	  each column.

2009-11-19

	* libsylph/ssl.c
	  src/sslmanager.c: calculate and display SHA1/MD5 fingerprint
	  if verification of SSL certificate failed.

2009-11-16

	* version 3.0.0beta2

2009-11-16

	* src/icons/sylpheed.ico: added 48x48(32bpp), 32x32(32bpp),
	  16x16(32bpp) icons.

2009-11-13

	* libsylph/imap.c: removed redundant debug print.
	* libsylph/libsylph-0.def: updated.

2009-11-13

	* src/addressbook.c: added sort order change (but disabled because of
	  random crash bug inside GTK+).