@@ -1,5 +1,9 @@
 2009-12-08
 
+	* src/addressbook.c: removed unused xpm objects. Added person icon.
+
+2009-12-08
+
 	* src/icons/address.xpm: modified icon.
 	* src/icons/stock_person.png
 	  src/stock_pixmap.[ch]: added new icon.
